# Estadistica_Ambiental

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  Fuentes.md  LICENSE  Plan.md  README.md  codecov.yml  config.example.yaml  index.html  jupyter-lite.json  jupyter_lite_config.json  lite_requirements.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml  scheduled.yml
adr/ADR-014-mediana-contaminada-iqr-rolling/: index.html
adr/ADR-015-validacion-espacial-filtra-vecinos-originales/: index.html
adr/ADR-016-pymc-bayesiano-fase10/: index.html
adr/ADR-017-jupyterlite-pyodide/: index.html
adr/ADR-018-base-satelite-governance/: index.html
adr/ADR-019-trusted-publishing-oidc-pypi/: index.html
api/: index.html
changelog/: index.html
data/: README.md
decisiones/: index.html
docs/: api.md  changelog.md  decisiones.md  getting-started.md  index.md  intake_lider.md  intake_output_template.md  lineas_tematicas.md  metodologia.md  modelos.md  notebooks.md
docs/adr/: ADR-014-mediana-contaminada-iqr-rolling.md  ADR-015-validacion-espacial-filtra-vecinos-originales.md  ADR-016-pymc-bayesiano-fase10.md  ADR-017-jupyterlite-pyodide.md  ADR-018-base-satelite-governance.md  ADR-019-trusted-publishing-oidc-pypi.md
docs/fuentes/: areas_protegidas.md  calidad_aire.md  cambio_climatico.md  direccion_directiva.md  geoespacial.md  gestion_riesgo.md  humedales.md  oferta_hidrica.md  ordenamiento_territorial.md  paramos.md  pomca.md  predios_conservacion.md  pueea.md  recurso_hidrico.md  rondas_hidricas.md  sistemas_informacion_ambiental.md
docs/templates/: rmd_child_template.md
examples/: 00_quickstart.py  01_calidad_aire_pm25.py  02_oferta_hidrica_caudal.py  03_paramos_iuh.py  04_cambio_climatico_co2.py  05_eda_generico.py  README.md
fuentes/areas_protegidas/: index.html
fuentes/calidad_aire/: index.html
fuentes/cambio_climatico/: index.html
fuentes/direccion_directiva/: index.html
fuentes/geoespacial/: index.html
fuentes/gestion_riesgo/: index.html
fuentes/humedales/: index.html
fuentes/oferta_hidrica/: index.html
fuentes/ordenamiento_territorial/: index.html
fuentes/paramos/: index.html
fuentes/pomca/: index.html
fuentes/predios_conservacion/: index.html
fuentes/pueea/: index.html
fuentes/recurso_hidrico/: index.html
fuentes/rondas_hidricas/: index.html
fuentes/sistemas_informacion_ambiental/: index.html
getting-started/: index.html
intake_lider/: index.html
intake_output_template/: index.html
lineas_tematicas/: index.html
metodologia/: index.html
modelos/: index.html
notebooks/: 00_plantilla_ciclo_completo.ipynb  index.html
scripts/: _patch_cc_notebook.py  _patch_direccion_notebook.py  _patch_gestion_riesgo_notebook.py  _patch_humedales_notebook.py  _patch_minor_notebooks.py  _patch_oferta_hidrica_notebook.py  _patch_ordenamiento_notebook.py  _patch_paramos_notebook.py  _patch_predios_notebook.py  _patch_recurso_hidrico_notebook.py  _patch_sistemas_info_notebook.py  build_calidad_aire_nb.py  build_master_template.py  build_notebooks.py  build_sisaire_showcase_nb.py  fase8_areas_protegidas.py  fase8_calidad_aire.py  fase8_calidad_aire_multimodel.py  fase8_cambio_climatico.py  fase8_direccion_directiva.py  fase8_gestion_riesgo.py  fase8_humedales.py  fase8_oferta_hidrica.py  fase8_ordenamiento_territorial.py  fase8_paramos.py  fase8_pomca.py  fase8_predios_conservacion.py  fase8_pueea.py  fase8_recurso_hidrico.py  fase8_rondas_hidricas.py  fase8_sistemas_informacion.py  generate_showcase.py  run_linea_tematica.py
search/: search_index.json
tests/: test_air_quality.py  test_bayesian.py  test_climate.py  test_compliance.py  test_connectors.py  test_deep.py  test_descriptive.py  test_eda.py  test_exogenous.py  test_forecast_report.py  test_imputation.py  test_inference.py  test_loaders.py  test_metrics.py  test_outliers.py  test_predictive.py  test_profiling.py  test_quality.py  test_regression_pr6.py  test_resampling.py  test_residual_ar.py  test_spatial.py  test_spatial_io.py  test_spatial_viz.py  test_stats_report.py  test_validators.py  test_viz.py
(+95 files in other folders)
