[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "estadistica-ambiental"
version = "0.1.0"
description = "Plantilla Python para estadística aplicada al medio ambiente"
authors = [{ name = "Dan Méndez" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    # I/O y datos
    "pandas>=2.0",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "scipy>=1.11",

    # EDA y perfilado
    "ydata-profiling>=4.6",
    "sweetviz>=2.3",
    "missingno>=0.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",

    # Preprocesamiento e imputación
    "scikit-learn>=1.4",

    # Series de tiempo
    "statsmodels>=0.14",
    "prophet>=1.1",

    # ML
    "xgboost>=2.0",
    "lightgbm>=4.2",

    # Optimización
    "optuna>=3.5",

    # Métricas ambientales
    "hydroeval>=0.1",

    # Tendencia (Mann-Kendall, Sen, Pettitt)
    "pymannkendall>=1.4",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1",
    "lightning>=2.1",
]
bayes = [
    "pymc>=5.9",
    "arviz>=0.18",
]
spatial = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "pykrige>=1.7",
    "pysal>=23.7",
    "esda>=2.5",
    "folium>=0.15",
    "contextily>=1.5",
    "pyproj>=3.6",
    "shapely>=2.0",
]
netcdf = [
    "netcdf4>=1.6",
    "h5netcdf>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
