[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "estadistica-ambiental"
version = "1.3.0"
description = "Plantilla Python para estadística aplicada al medio ambiente"
authors = [{ name = "Dan Méndez" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    # I/O y datos
    "pandas>=2.0",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "requests>=2.31",
    "scipy>=1.11",

    # Visualización
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Preprocesamiento e imputación
    "scikit-learn>=1.4",

    # Series de tiempo
    "statsmodels>=0.14",

    # Optimización
    "optuna>=3.5",

    # Métricas ambientales
    "hydroeval>=0.1",

    # Tendencia (Mann-Kendall, Sen, Pettitt)
    "pymannkendall>=1.4",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.2",
]
prophet = [
    "prophet>=1.1",
]
profile = [
    "ydata-profiling>=4.6",
    "sweetviz>=2.3",
    "missingno>=0.5",
    "plotly>=5.18",
]
deep = [
    "torch>=2.1",
    "lightning>=2.1",
]
bayes = [
    "pymc>=5.9",
    "arviz>=0.18",
]
spatial = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "pykrige>=1.7",
    "pysal>=23.7",
    "esda>=2.5",
    "folium>=0.15",
    "contextily>=1.5",
    "pyproj>=3.6",
    "shapely>=2.0",
]
netcdf = [
    "netcdf4>=1.6",
    "h5netcdf>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]
fast = [
    "polars>=0.20",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/estadistica_ambiental"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/estadistica_ambiental"]
omit = [
    "*/tests/*",
    "src/estadistica_ambiental/predictive/deep.py",
    "src/estadistica_ambiental/predictive/bayesian.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise ImportError",
    "if TYPE_CHECKING:",
    "^\\.\\.\\.\\s*$",
]
